--- a/.github/workflows/run-scandium.yml
+++ b/.github/workflows/run-scandium.yml
@@ -80,32 +80,31 @@ jobs:
       
             jq -r '
               "Hello,\n\nThe latest Scandium test run has completed with the following result:\n\n━━━━━━━━━━━━━━━━━━━━━━━" +
-              "\n🧪 Test Suite: \(.data.name)" +
-              "\n📊 Status: \(.data.status | ascii_downcase | if . == \"error\" then \"❌ ERROR\" else . end)" +
-              "\n💻 Browser: \(.data.browser) \(.data.browser_version)" +
-              "\n🖥 OS: \(.data.operating_system) (\(.data.operating_system_version))" +
+              "\n\\ud83e\\uddea Test Suite: \(.data.name)" +
+              "\n\\ud83d\\udcca Status: \(.data.status | ascii_downcase | if . == \"error\" then \"\\u274c ERROR\" else . end)" +
+              "\n\\ud83d\\udcbb Browser: \(.data.browser) \(.data.browser_version)" +
+              "\n\\ud83d\\udda5 OS: \(.data.operating_system) (\(.data.operating_system_version))" +
               "\n\n━━━━━━━━━━━━━━━━━━━━━━━" +
-              "\n🔍 Test Case: \(.data.results[0].name)" +
-              "\n⏱ Duration: \((.data.results[0].duration / 1000.0) | tostring) seconds" +
-              "\n📈 Summary: \(.data.results[0].summary.passed) Passed / \(.data.results[0].summary.total) Total" +
-              "\n📉 Status: ❌ \(.data.results[0].status | ascii_upcase)" +
-              "\n🧾 Reason: \(.data.results[0].reason // \"N/A\")" +
+              "\n\\ud83d\\udd0d Test Case: \(.data.results[0].name)" +
+              "\n\\u23f1 Duration: \((.data.results[0].duration / 1000.0) | tostring) seconds" +
+              "\n\\ud83d\\udcc8 Summary: \(.data.results[0].summary.passed) Passed / \(.data.results[0].summary.total) Total" +
+              "\n\\ud83d\\udcc9 Status: \\u274c \(.data.results[0].status | ascii_upcase)" +
+              "\n\\ud83e\\uddfe Reason: \(.data.results[0].reason // \"N/A\")" +
               "\n\n━━━━━━━━━━━━━━━━━━━━━━━" +
-              "\n📋 Step Breakdown:\n" +
+              "\n\\ud83d\\udccb Step Breakdown:\n" +
               (
                 .data.results[0].test_runs | map(
-                  "  \((.status == \"error\")? \"❌\" : \"✅\") \(.title) (\((.time_taken / 1000.0) | tostring)s)" +
+                  "  \((if .status == \"error\" then \"\\u274c\" else \"\\u2705\" end)) \(.title) (\((.time_taken / 1000.0) | tostring)s)" +
                   (if .status == "error" then
-                    "\n   ┗ Error: \(.error // \"Unknown\")" +
+                    "\n   \\u2517 Error: \(.error // \"Unknown\")" +
                     (if .result_screenshot.imageData then
-                      "\n   ┗ 📸 Screenshot: \(.result_screenshot.imageData)"
+                      "\n   \\u2517 \\ud83d\\udcf8 Screenshot: \(.result_screenshot.imageData)"
                     else "" end)
                   else "" end)
                 ) | join("\n")
               ) +
               "\n\n━━━━━━━━━━━━━━━━━━━━━━━\n\nThe complete execution log is attached.\n\nBest regards,\nScandium CI Bot"
             ' parsed_result.json > body.txt
-
           fi
       
           {
